--- a/style.css
+++ b/style.css
@@ -243,3 +243,589 @@ hr {
     background-color: red;
     color: red;
 }
+
+#frame2 {
+    margin-top: 100px;
+    display: flex;
+}
+
+#frame2-ctn {
+    margin-left: 200px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+.advan-item {
+    display: flex;
+    margin-top: 20px;
+}
+
+.advan-item p {
+    color: var(--gray, #2B2B2B);
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+#frame2-ctn h1 {
+    width: 308px;
+    height: 77px;
+    color: var(--gray, #2B2B2B);
+    font-family: Rubik;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+#latinh {
+    width: 408px;
+    height: 77px;
+    color: #5A5A5A;
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#plan {
+    margin-top: 100px;
+}
+
+#plan-title {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#plan-title h1 {
+    color: var(--gray, #2B2B2B);
+    font-family: Rubik;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+#plan-title p {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 559px;
+    height: 77px;
+    color: #5A5A5A;
+    ;
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.plans {
+    gap: 20px;
+    margin-top: 20px;
+    display: flex;
+}
+
+.plan-item {
+    display: flex;
+    width: 317px;
+    height: 803px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 22px;
+    border-radius: 20px;
+    border: 2px solid #D3D3D3;
+}
+
+.plan-item h2 {
+    margin-top: 35px;
+    margin-bottom: 25px;
+    color: var(--gray, #2B2B2B);
+    font-family: Rubik;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.plan-item p {
+    margin-left: 20px;
+    color: var(--gray, #2B2B2B);
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.select-ctn h1 {
+    margin-bottom: 20px;
+}
+
+.one {
+    margin-bottom: 20px;
+    color: var(--gray, #2B2B2B);
+    font-family: Rubik;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.two {
+    color: var(--very-gray, #646464);
+    font-family: Rubik;
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.three {
+    color: var(--very-gray, #646464);
+    font-family: Rubik;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.select-ctn {
+    margin-top: auto;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.slc-btn {
+    cursor: pointer;
+    display: flex;
+    width: 173px;
+    height: 45px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: var(--red, #F53838);
+    border: 0;
+    color: #FFF;
+    font-family: Rubik;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.benefit {
+    margin-top: -27px;
+}
+
+.benefit-item {
+    display: flex;
+    margin-top: 35px;
+}
+
+#frame3-title {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#frame3-title h1 {
+    width: 270px;
+    color: var(--gray, #2B2B2B);
+    text-align: center;
+    font-family: Rubik;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+#frame3-title p {
+    width: 559px;
+    height: 77px;
+    color: #5A5A5A;
+    text-align: center;
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+img {
+    cursor: pointer;
+}
+
+#global-map {
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+#customers {
+    margin-bottom: 170px;
+}
+
+#customers-title {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+#customers-title h1 {
+    margin-bottom: 20px;
+    width: 400px;
+    color: var(--gray, #2B2B2B);
+    text-align: center;
+    font-family: Rubik;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+#customers-title p {
+    width: 559px;
+    height: 77px;
+    color: #5A5A5A;
+    text-align: center;
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#comments {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+#comments li {
+    gap: 0px;
+    border-radius: 20px;
+    border: 1px solid #CCC;
+}
+
+.infor {
+    display: flex;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.name {
+    margin-left: 15px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.name h1 {
+    margin-bottom: 4px;
+    color: #2C2C2C;
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.from {
+    color: #7B7B7B;
+    font-family: Rubik;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.start {
+    display: flex;
+    text-align: right;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.start-ctn {
+    display: flex;
+    justify-content: center;
+    margin: 0px 0px 0px auto;
+    margin-right: 20px;
+}
+
+.start p {
+    color: #7B7B7B;
+    font-family: Rubik;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+#start-icon {
+    display: flex;
+    margin-left: 5px;
+}
+
+.comment {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    width: 350px;
+    margin-top: 20px;
+    color: #5A5A5A;
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#change-comments {
+    display: flex;
+    justify-content: center;
+    margin: 0px 0px 0px auto;
+    margin-right: 20px;
+}
+
+#frame68 {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    margin-bottom: 20px;
+}
+
+#frame68 img {
+    object-fit: contain;
+}
+
+#left {
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+#right {
+    cursor: pointer;
+}
+
+#subrice {
+    margin-top: 3720px;
+    position: absolute;
+    z-index: 1000;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+}
+
+#subrice-ctn {
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    width: 1146px;
+    height: 181px;
+    justify-content: center;
+    align-items: center;
+    gap: 571px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: #FFF;
+    box-shadow: 12px 18px 54px 0px rgba(0, 0, 0, 0.11);
+}
+
+#subrice-ctn h1 {
+    color: var(--gray, #2B2B2B);
+    font-family: Rubik;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+#subrice-ctn p {
+    margin-top: 20px;
+    color: #5A5A5A;
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#subrice-text {
+    margin-left: 40px;
+}
+
+#subrice-btn {
+    margin-right: 20px;
+    cursor: pointer;
+    display: flex;
+    width: 244px;
+    height: 57px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 20px;
+    background: var(--red, #F53838);
+    color: #FFF;
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    border: 0;
+}
+
+#end {
+    margin-top: 5px;
+    position: relative;
+    display: flex;
+    width: 100%;
+    background: #F4F4F4;
+    justify-content: center;
+}
+
+#contact {
+    margin-right: 100px;
+    margin-top: auto;
+    margin-bottom: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+#logo {
+    display: flex;
+}
+
+#lasles {
+    color: var(--normal, #151515);
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#vpn1 {
+    color: var(--normal-1, #101010);
+    font-family: Rubik;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+#contact p {
+    margin-top: 20px;
+    width: 337px;
+    height: 77px;
+    color: #5A5A5A;
+    font-family: Rubik;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+#social {
+    display: flex;
+}
+
+#social li {
+    margin-right: 15px;
+    cursor: pointer;
+    display: flex;
+    width: 37px;
+    height: 37px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 500px;
+    background: var(--red-2, rgba(245, 56, 56, 0.10));
+}
+
+.list {
+    margin-top: 80px;
+    margin-left: 100px;
+    margin-bottom: 50px;
+}
+
+.list-title {
+    color: var(--normal, #151515);
+    font-family: Rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.item {
+    margin-top: 20px;
+    cursor: pointer;
+    color: var(--very-gray, #646464);
+    font-family: Rubik;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+@media only screen and (max-width: 600px) {
+    img {
+        width: 300px;
+    }
+    
+    nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #menu {
+        display: none;
+    }
+
+    #sign-in-ctn {
+        display: none;
+    }
+    #sign-up-ctn {
+        display: none;
+    }
+
+    #hero {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #hero-ctn h1 {
+        width: 100px;
+        font-size: 32.143px;
+    }
+
+    #hero-ctn p {
+        width: 100px;
+    }
+  }
